--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -62,3 +62,23 @@ block:
   base:
     id: ???
     name: ???
+
+custom_sp:
+  default:
+    _type_: sp.custom
+    seed: ???
+    sp_type: vectorized
+    # input
+    feedforward_sds: ???
+    initial_rf_sparsity: 0.25
+    max_rf_sparsity: 0.1
+    max_rf_to_input_ratio: 2.5
+    # output
+    output_sds: ???
+    # learning
+    min_overlap_for_activation: 3
+    learning_rate_inc: 0.1
+    learning_rate_dec: 0.01
+    newborn_pruning_cycle: 5
+    newborn_pruning_stages: 3
+    boosting_k: 2.0
