--- a/hima/experiments/temporal_pooling/sweeps/sp_boosting.yaml
+++ b/hima/experiments/temporal_pooling/sweeps/sp_boosting.yaml
@@ -37,4 +37,4 @@ command:
     #   |- configs/
     #       |- single_run_config.yaml
   - --config
-  - ./configs/fastw.yaml
+  - ../configs/stp.yaml
