--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -69,15 +69,15 @@ spatial_pooler:
     seed: ???
     # input
     feedforward_sds: ???
-    initial_rf_sparsity: 0.25
+    initial_rf_to_input_ratio: 10.0
+    max_rf_to_input_ratio: 3.0
     max_rf_sparsity: 0.1
-    max_rf_to_input_ratio: 2.5
     # output
     output_sds: ???
     # learning
     min_overlap_for_activation: 3
     learning_rate: 0.1
     global_inhibition_strength: 0.01
-    newborn_pruning_cycle: 5
-    newborn_pruning_stages: 3
+    newborn_pruning_cycle: 1.0
+    newborn_pruning_stages: 5
     boosting_k: 0.5
