--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -1,5 +1,5 @@
 _type_: stp.synthetic_sequences
-project: stp.fast_weights
+project: stp.sp_neurogenesis
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
@@ -329,13 +329,14 @@ blocks:
     global_config: ???
     sp:
       _base_: $_base.spatial_pooler.default
-      initial_rf_sparsity: 0.25
+      initial_rf_to_input_ratio: 5.0
+      max_rf_to_input_ratio: 0.8
       max_rf_sparsity: 0.08
-      max_rf_to_input_ratio: 1.0
       learning_rate: 0.1
       global_inhibition_strength: 0.1
-      newborn_pruning_cycle: 0.2
+      newborn_pruning_cycle: 0.1
       newborn_pruning_stages: 5
+      prune_grow_cycle: 10.0
       adapt_to_ff_sparsity: False
   sp1:
     _type_: block.sp
