--- a/hima/experiments/temporal_pooling/sweeps/sp_boosting.yaml
+++ b/hima/experiments/temporal_pooling/sweeps/sp_boosting.yaml
@@ -9,10 +9,15 @@ parameters:
 
   # for hyperparameter search we don't need too much logging and too much learning
   iterate..epochs:
-    value: 10
+    value: 40
   model.:
     value: models.tm_enc
 
+  blocks..sp0.sp.initial_rf_to_input_ratio:
+    values:
+      - 5.0
+      - 8.0
+      - 10.0
   blocks..sp0.sp.max_rf_to_input_ratio:
     values:
       - 0.8
@@ -23,6 +28,11 @@ parameters:
       - 0.5
       - 1.0
       - 2.0
+  blocks..sp0.sp.global_inhibition_strength:
+    values:
+      - 0.1
+      - 0.2
+      - 0.4
 
 command:
   - ${env}
