--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -10,8 +10,7 @@ iterate:
 
 model:
   pipeline:
-    - input.sdr -> gen.output.sdr
-    - gen.output.sdr -> sp0.feedforward.sdr
+    - input.sdr -> sp0.feedforward.sdr
     - sp0.output.sdr -> tm1.feedforward.sdr
     - compute TM1:
       - tm1.predict
@@ -19,7 +18,13 @@ model:
       - tm1.activate
     - tm1.correctly_predicted_cells.sdr -> output.sdr
 
-track_streams:
+trackers:
+  - name: input.sdr
+    track:
+      - input.sdr
+      - step
+
+stream_trackers:
   gen.output:
     - sdr
     - cross.online.el
