--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,13 +1,14 @@
-cells_per_column: 15
-n_vars_per_factor: 15
-factor_activation_threshold: 0  # number of active variables in a receptive field to active factor
+cells_per_column: 10
+n_vars_per_factor: 1
+factor_activation_threshold: 1  # number of active variables in a receptive field to active factor
 factors_per_var: 10
 initial_factor_value: 0.0
-beta: 10.0  # importance of active vars for receptive field
+beta: 0  # importance of active vars for receptive field
 lr: 1.0
 gamma: 0.1
 punishment: 0.1
 cell_activation_threshold: 0.0001
-max_segments_per_cell: 100
-max_segments_for_spec_state: 1000
+max_segments_per_cell: 10
+max_segments_for_off_state: 0
 segment_prune_threshold: 0.0001
+allow_synapses_to_off_states: False
